--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/jest": "^25.1.4",
     "father-build": "^1.17.2",
+    "husky": "^4.2.3",
     "jest": "^25.2.4",
     "ts-jest": "^25.3.0",
     "typescript": "^3.8.3",
